--- a/templates/math/problems/post.html
+++ b/templates/math/problems/post.html
@@ -101,7 +101,7 @@
 		</div>
 	</div>
 </div>
-<script src="{{ url_for('math.static', filename='js/event.js') }}"></script>
+{% include "math/problems/event.js.html" %}
 <script>
 	const content = document.getElementById("content");
 	const preview = document.getElementById("preview");
