--- a/templates/math/problems/index.html
+++ b/templates/math/problems/index.html
@@ -36,7 +36,7 @@
 							</li>
 							{% for j in math[i] %}
 								<li class="list-group-item">
-									<input type="checkbox" name="All{{i}}{{j}}" id="All{{i}}{{j}}" class="form-check-input me-1 unit-checkbox" data-category="{{ i }}">
+									<input type="checkbox" name="All{{i}}{{j}}" id="All{{i}}{{j}}" class="form-check-input me-1 unit-checkbox" data-category="{{ i }}" data-unit="{{ j }}">
 									<label for="All{{i}}{{j}}" class="form-check-label">{{j}}</label>
 								</li>
 							{% endfor %}
@@ -44,6 +44,12 @@
 					</div>
 				</div>
 			{% endfor %}
+		</div>
+	</div>
+	<div class="container my-3">
+		<h4>選択された単元</h4>
+		<div id="selectedUnitsDisplay" class="alert alert-info">
+			選択された単元はありません。
 		</div>
 	</div>
 	<div class="container my-3">
@@ -117,8 +123,34 @@
 				unitCheckboxes.forEach(checkbox => {
 					checkbox.checked = event.target.checked;
 				});
+				updateSelectedUnitsDisplay();
 			});
 		});
+
+		// すべてのチェックボックスを取得
+		const allCheckboxes = document.querySelectorAll('.form-check-input');
+
+		// チェックボックスの変更イベントを監視
+		allCheckboxes.forEach(checkbox => {
+			checkbox.addEventListener('change', () => {
+				updateSelectedUnitsDisplay();
+			});
+		});
+
+		// 選択された単元を表示する関数
+		function updateSelectedUnitsDisplay() {
+			const selectedUnits = Array.from(document.querySelectorAll('.unit-checkbox:checked')).map(checkbox => ({
+				category: checkbox.dataset.category,
+				unit: checkbox.dataset.unit
+			}));
+
+			const displayElement = document.getElementById('selectedUnitsDisplay');
+			if (selectedUnits.length > 0) {
+				displayElement.innerHTML = selectedUnits.map(unit => `${unit.category} - ${unit.unit}`).join('<br>');
+			} else {
+				displayElement.innerHTML = '選択された単元はありません。';
+			}
+		}
 	});
 </script>
 {% endblock %}
