--- a/templates/math/problems/post.html
+++ b/templates/math/problems/post.html
@@ -92,6 +92,29 @@
 				</div>
 			</form>
 			<div class="mb-3">
+				<h5>便利なコード</h5>
+				<table class="table">
+					<thead>
+						<tr>
+							<th scope="col" style="width: 10%;">意味</th>
+							<th scope="col" style="width: 10%;">コード</th>
+							<th scope="col" style="width: 80%;">表示</th>
+						</tr>
+					</thead>
+					<tbody>
+						<tr>
+							<td>証明終わり</td>
+							<td>[終]</td>
+							<td>
+								<div id="preview" class="border rounded bg-white p-3" style="max-width: 1000px;margin: 0 auto;">
+									<p style="text-align: right; padding-right: 10%;">(終)</p>
+								</div>
+							</td>
+						</tr>
+					</tbody>
+				</table>
+			</div>
+			<div class="mb-3">
 				<h5>LaTeXについて</h5>
 				"\\("と"\\)"で囲むと文章中に、"\\["と"\\]"で囲むと別行立てで数式が表示されます。
 				<h6>主なコマンド</h6>
