--- a/templates/math/problems/problem.html
+++ b/templates/math/problems/problem.html
@@ -137,9 +137,12 @@
 <script>
 	const answer = document.getElementById("answer");
 	const preview = document.getElementById("preview");
-	listener(answer, preview);
 
-	const latexCode = "(答)\\(\\boxed{\\dfrac{1}{2}x^2+x+2}\\)";
-	mathjaxupdate(preview, latexCode);
+	if (answer && preview) {
+		listener(answer, preview);
+
+		const latexCode = "(答)\\(\\boxed{\\dfrac{1}{2}x^2+x+2}\\)";
+		mathjaxupdate(preview, latexCode);
+	}
 </script>
 {% endblock %}
