--- a/templates/math/problems/index.html
+++ b/templates/math/problems/index.html
@@ -28,7 +28,7 @@
 							{{ i }}
 						</button>
 					</h2>
-					<div class="accordion-collapse collapse" id="{{ i }}units" aria-labelledby="{{ i }}">
+					<div class="accordion-collapse collapse" id="{{ i }}units" aria-labelledby="{{ i }}" data-bs-parent="#categoryAccordion">
 						<ul class="list-group">
 							<li class="list-group-item">
 								<input type="checkbox" name="All{{i}}" id="All{{i}}" class="form-check-input me-1 select-all" data-category="{{ i }}">
