--- a/templates/math/problems/index.html
+++ b/templates/math/problems/index.html
@@ -172,6 +172,8 @@
 						`;
 						container.appendChild(problemElement);
 					});
+					MathJax.typesetClear();
+					MathJax.typesetPromise([container]);
 				} else {
 					container.innerHTML = '<p>該当する問題がありません。</p>';
 				}
