--- a/templates/math/problems/pdf.html
+++ b/templates/math/problems/pdf.html
@@ -1,7 +1,15 @@
-{% extends "math/layout.html" %}
-{% block title %}{{ data["title"] }}{% endblock %}
-{% block content %}
-<div>
-    {{ math_format(data["content"]) | replace("\r\n", "<br>") | safe }}
-</div>
-{% endblock %}
+<!DOCTYPE html>
+<html lang="ja">
+    <head>
+        <meta charset="UTF-8">
+        <meta http-equiv="X-UA-Compatible" content="IE=edge">
+        <meta name="viewport" content="width=device-width, initial-scale=1.0">
+        <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/js/bootstrap.bundle.min.js" integrity="sha384-MrcW6ZMFYlzcLA8Nl+NtUVF0sA7MsXsP1UyJoMp4YLEuNSfAP+JcXn/tWtIaxVXM" crossorigin="anonymous"></script>
+        <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-EVSTQN3/azprG1Anm3QDgpJLIm9Nao0Yz1ztcQTwFspd3yD65VohhpuuCOmLASjC" crossorigin="anonymous">
+        <title>{{ data["title"] }}</title>
+        <script id="MathJax" src="https://cdn.jsdelivr.net/npm/mathjax@3/es5/tex-mml-chtml.js"></script>
+    </head>
+    <body>
+        {{ math_format(data["content"]) | replace("\r\n", "<br>") | safe }}
+    </body>
+</html>
