--- a/templates/math/problems/edit.html
+++ b/templates/math/problems/edit.html
@@ -13,17 +13,17 @@
 				<div class="mb-3">
 					<label for="preview" class="form-label">問題文プレビュー</label>
 					<div style="max-width: 1180px;margin: 0 auto;">
-						<div id="preview" class="border rounded bg-white p-3" style="min-height: 120px;max-width: 1180px;margin: 0 auto;"></div>
+						<div id="preview" class="border rounded bg-white p-3" style="min-height: 120px;max-width: 1180px;margin: 0 auto;">{{ math_format(data['content']) | replace("\r\n", "<br>") | safe }}</div>
 					</div>
 				</div><!--PREVIEW-->
 				<div class="mb-3">
 					<label for="content" class="form-label">問題文(LaTeX対応)</label>
-					<textarea name="content" id="content" class="form-control" rows="6" required">{{ data['content'] }}</textarea>
+					<textarea name="content" id="content" class="form-control" rows="6" required>{{ data['content'] }}</textarea>
 				</div><!--CONTENT-->
 				<div class="mb-3">
 					<label for="preview2" class="form-label">解答解説プレビュー</label>
 					<div style="max-width: 1180px;margin: 0 auto;">
-						<div id="preview2" class="border rounded bg-white p-3" style="min-height: 120px;max-width: 1180px;margin: 0 auto;"></div>
+						<div id="preview2" class="border rounded bg-white p-3" style="min-height: 120px;max-width: 1180px;margin: 0 auto;">{{ math_format(data['explanation']) | replace("\r\n", "<br>") | safe }}</div>
 					</div>
 				</div><!--PREVIEW2-->
 				<div class="mb-3">
@@ -97,8 +97,5 @@
 	})
 
 	unitSelect.value = "{{ data['unit'] }}";
-
-	latexevent(content, preview);
-	latexevent(explanation, preview2);
 </script>
 {% endblock %}
