--- a/templates/math/layout.html
+++ b/templates/math/layout.html
@@ -12,6 +12,16 @@
 	<script id="MathJax" src="https://cdn.jsdelivr.net/npm/mathjax@3/es5/tex-mml-chtml.js"></script>
 	<!--<link rel="stylesheet" type="text/css" href="https://tikzjax.com/v1/fonts.css">-->
 	<!--<script id="TikzJax" src="https://tikzjax.com/v1/tikzjax.js"></script>-->
+	<style>
+		@font-face {
+			font-family: "HaranoAjiMincho";
+			src: url("{{ url_for('math.static', filename='fonts/HaranoAjiMincho-Regular.otf') }}") format("opentype");
+		}
+
+		.math-font {
+			font-family: "HaranoAjiMincho";
+		}
+	</style>
 </head>
 <body>
 	<div class="pb-5">
