--- a/templates/math/problems/pdf.html
+++ b/templates/math/problems/pdf.html
@@ -8,8 +8,20 @@
         <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-EVSTQN3/azprG1Anm3QDgpJLIm9Nao0Yz1ztcQTwFspd3yD65VohhpuuCOmLASjC" crossorigin="anonymous">
         <title>{{ data["title"] }}</title>
         <script id="MathJax" src="https://cdn.jsdelivr.net/npm/mathjax@3/es5/tex-mml-chtml.js"></script>
+        <style>
+            @font-face {
+                font-family: "HaranoAjiMincho";
+                src: url("{{ url_for('math.static', filename='fonts/HaranoAjiMincho-Regular.otf') }}") format("opentype");
+            }
+
+            .math-font {
+                font-family: "HaranoAjiMincho";
+            }
+        </style>
     </head>
     <body>
-        {{ math_format(data["content"]) | replace("\r\n", "<br>") | safe }}
+        <div class="math-font" style="max-width: 1180px;margin-right: auto;">
+            {{ math_format(data["content"]) | replace("\r\n", "<br>") | safe }}
+        </div>
     </body>
 </html>
