--- a/templates/math/problems/post.html
+++ b/templates/math/problems/post.html
@@ -41,7 +41,7 @@
 				<div class="mb-3">
 					<label for="preview" class="form-label">問題文プレビュー</label>
 					<div style="max-width: 1180px;margin: 0 auto;">
-						<div id="preview" class="border rounded bg-white p-3" style="min-height: 120px;max-width: 1000px;margin: 0 auto;"></div>
+						<div id="preview" class="border rounded bg-white p-3 math-font" style="min-height: 120px;max-width: 1000px;margin: 0 auto;"></div>
 					</div>
 				</div><!--PREVIEW-->
 				<div class="mb-3">
@@ -55,7 +55,7 @@
 				<div class="mb-3">
 					<label for="preview2" class="form-label">解答解説プレビュー</label>
 					<div style="max-width: 1180px;margin: 0 auto;">
-						<div id="preview2" class="border rounded bg-white p-3" style="min-height: 120px;max-width: 1180px;margin: 0 auto;"></div>
+						<div id="preview2" class="border rounded bg-white p-3 math-font" style="min-height: 120px;max-width: 1180px;margin: 0 auto;"></div>
 					</div>
 				</div><!--PREVIEW2-->
 				<div class="mb-3">
