feat: add font serving route and update font URL in templates for HaranoAjiMincho

--- a/templates/math/layout.html
+++ b/templates/math/layout.html
@@ -15,7 +15,8 @@
 	<style>
 		@font-face {
 			font-family: "HaranoAjiMincho";
-			src: url("{{ url_for('math.static', filename='fonts/HaranoAjiMincho-Regular.otf') }}") format("opentype");
+			src: url("{{ url_for('math.serve_fonts', font='HaranoAjiMincho-Regular.otf') }}") format("opentype");
+			font-display: swap;
 		}
 
 		.math-font {
