--- a/templates/math/problems/pdf.html
+++ b/templates/math/problems/pdf.html
@@ -11,7 +11,7 @@
         <style>
             @font-face {
                 font-family: "HaranoAjiMincho";
-                src: url("{{ url_for('math.static', filename='fonts/HaranoAjiMincho-Regular.otf') }}") format("opentype");
+                src: url("{{ url_for('math.serve_fonts', font='HaranoAjiMincho-Regular.otf') }}") format("opentype");
             }
 
             .math-font {
