解答自動生成機能を無効化

--- a/templates/math/problems/post.html
+++ b/templates/math/problems/post.html
@@ -64,7 +64,7 @@
 				<div class="mb-3">
 					<div class="row">
 						<div class="col"><label for="explanation" class="form-label">解答解説(任意)</label></div>
-						<div class="col text-end"><button type="button" id="generateExplanationBtn" class="btn btn-primary">解答解説を自動生成</button></div>
+						<!--<div class="col text-end"><button type="button" id="generateExplanationBtn" class="btn btn-primary">解答解説を自動生成</button></div>-->
 					</div>
 					<textarea name="explanation" id="explanation" class="form-control" rows="6"></textarea>
 				</div><!--EXPLANATION-->
